G/tests/fail/enum_cross_compare.g
enum Color { Red, Green }
enum Fruit { Apple, Banana }
fn main() -> int {
    if Red == Apple { return 1 }
    return 0
}
